# Reversi_Game

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ClientServerCommunication.cpp  ClientServerCommunication.h  ConsoleDisplay.cpp  ConsoleDisplay.h  DefaultLogic.cpp  DefaultLogic.h  Display.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  README.md  RemotePlayer.cpp  RemotePlayer.h  a.out  details.txt  log.txt  main.cpp  makefile
test/: gtest_main.cpp  test_AIPlayer.cpp  test_Board.cpp  test_DeafaultLogic.cpp
